added page navigation

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,12 +7,14 @@
 	<link rel="icon" type="image/svg+xml" href"/favicon.svg" />
 	<meta name="viewport" content="width=device-width" />
 	<meta name="generator" content={Astro.generator} >
-	<title>splashsite</title>
+	<title>about</title>
     </head>
     <body>
 	<a href="/">home</a>
 	<a href="/about">about</a>
 	<a href="/blog">blog</a>
 
-	<h1>under construction - check back later</h1>
+	<h1>hi, i'm splash!</h1>
+	<h2>devsecops engineer + amateur blogger</h2>
+	<p>I'm Enrique "splash" Javier, a DevSecOps engineer based in NYC, focused on maintaining secure and reliable applications in any and all environments.</p>
     </body>
