--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/svg+xml" href"/favicon.svg" />
 	<meta name="viewport" content="width=device-width" />
 	<meta name="generator" content={Astro.generator} >
-	<title>splashsite</title>
+	<title>blog</title>
     </head>
     <body>
 	<a href="/">home</a>
