--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,5 +14,10 @@
 	<a href="/about">about</a>
 	<a href="/blog">blog</a>
 
-	<h1>under construction - check back later</h1>
+	<h1>Blog</h1>
+	<ul>
+	    <li><a href="/posts/post-1/">Post 1</a></li>
+	    <li><a href="/posts/post-2/">Post 2</a></li>
+	    <li><a href="/posts/post-3/">Post 3</a></li>
+	</ul>
     </body>
