--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "splashsite - under construction"
 ---
 
 <html lang="en">
@@ -7,12 +8,12 @@
 	<link rel="icon" type="image/svg+xml" href"/favicon.svg" />
 	<meta name="viewport" content="width=device-width" />
 	<meta name="generator" content={Astro.generator} >
-	<title>splashsite</title>
+	<title>{pageTitle}</title>
     </head>
     <body>
 	<a href="/">home</a>
 	<a href="/about">about</a>
 	<a href="/blog">blog</a>
 
-	<h1>under construction - check back later</h1>
+	<h1>{pageTitle}</h1>
     </body>
