--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "blog"
 ---
 
 <html lang="en">
@@ -7,14 +8,14 @@
 	<link rel="icon" type="image/svg+xml" href"/favicon.svg" />
 	<meta name="viewport" content="width=device-width" />
 	<meta name="generator" content={Astro.generator} >
-	<title>blog</title>
+	<title>{pageTitle}</title>
     </head>
     <body>
 	<a href="/">home</a>
 	<a href="/about">about</a>
 	<a href="/blog">blog</a>
 
-	<h1>Blog</h1>
+	<h1>{pageTitle}</h1>
 	<ul>
 	    <li><a href="/posts/post-1/">Post 1</a></li>
 	    <li><a href="/posts/post-2/">Post 2</a></li>
