--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-const pageTitle = "splashsite - under construction"
+const pageTitle = "splashpage"
 ---
 
 <html lang="en">
@@ -11,9 +11,15 @@ const pageTitle = "splashsite - under construction"
 	<title>{pageTitle}</title>
     </head>
     <body>
-	<a href="/">home</a>
-	<a href="/about">about</a>
-	<a href="/blog">blog</a>
-
-	<h1>{pageTitle}</h1>
+	<section>
+	    <a href="/">home</a>
+	    <a href="/about">about</a>
+	    <a href="/blog">blog</a>
+	</section>
+	<section>
+	    <h1>Enrique Javier</h1>
+	    <p>
+		I'm a DevOps Engineer dedicated to making tech simple and seamless.
+	    </p>
+	</section>
     </body>
