--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,14 +12,14 @@ const pageTitle = "splashpage"
     </head>
     <body>
 	<section>
+	    <h1>Enrique Javier</h1>
 	    <a href="/">home</a>
 	    <a href="/about">about</a>
 	    <a href="/blog">blog</a>
 	</section>
 	<section>
-	    <h1>Enrique Javier</h1>
 	    <p>
-		I'm a DevOps Engineer dedicated to making tech simple and seamless.
+		I'm a DevOps Engineer building simpler, seamless workflows for devs and users alike. I fell in love with tech and its endless possibilities as early as I can remember, and I strive to make it easier for others to fall in love with it, too.
 	    </p>
 	</section>
     </body>
