resume and link added

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -47,5 +47,6 @@ const tools = ["Neovim", "Bash", "PowerShell", "MySQL", "JSON", "YAML", "Markdow
 	    <ul>
 		{tools.map((tool) => <li>{tool}</li>)}
 	    </ul>
+	    <a href="/enrique_javier_resume.pdf">Download Resume (PDF)</a>
 	</section>
     </body>
