--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,24 +1,14 @@
 ---
-const pageTitle = "blog"
+import Layout from "../layouts/Layout.astro"
 ---
-
-<html lang="en">
-    <head>
-	<meta charset="utf-8" />
-	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<meta name="viewport" content="width=device-width" />
-	<meta name="generator" content={Astro.generator} >
-	<title>{pageTitle}</title>
-    </head>
-    <body>
-	<a href="/">home</a>
-	<a href="/about">about</a>
-	<a href="/blog">blog</a>
-
-	<h1>{pageTitle}</h1>
-	<ul>
-	    <li><a href="/posts/post-1/">Post 1</a></li>
-	    <li><a href="/posts/post-2/">Post 2</a></li>
-	    <li><a href="/posts/post-3/">Post 3</a></li>
-	</ul>
-    </body>
+<Layout title={"blog"}>
+    <main>
+	<section>
+	    <ul>
+		<li><a href="/posts/post-1/">Post 1</a></li>
+		<li><a href="/posts/post-2/">Post 2</a></li>
+		<li><a href="/posts/post-3/">Post 3</a></li>
+	    </ul>
+	</section>
+    </main>
+</Layout>
