fucking around with styling

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,11 @@
 ---
 
 ---
-<section>
-    <div>
+<section class="flex flex-row flex-auto justify-between py-12">
+    <div class="text-lg">
 	<h1>Enrique Javier</h1>
     </div>
-    <div>
+    <div class="content-center">
 	<a href="/">home</a>
 	<a href="/about">about</a>
 	<a href="/blog">blog</a>
