--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,13 @@
 ---
 
 ---
-<section>
+<section class="flex flex-row justify-between py-20 text-xs">
     <div>
-	<p>&copy; 2025, Enrique Javier. Made with astro, tailwind, and love.</p>
+	<p>&copy; 2025</p>
     </div>
-    <div>
-	<a href="mailto:emjavier16@proton.me">Email</a>
-	<a href="https://github.com/usefulsplash" target="_blank" rel="noreferrer noopener">GitHub</a>
-	<a href="https://twitter.com/emjavier16" target="_blank" rel="noreferrer noopener">Twitter</a>
+    <div class="">
+	<a href="mailto:emjavier16@proton.me" class="underline">Email</a>
+	<a href="https://github.com/usefulsplash" target="_blank" rel="noreferrer noopener" class="underline">GitHub</a>
+	<a href="https://twitter.com/emjavier16" target="_blank" rel="noreferrer noopener" class="underline">Twitter</a>
     </div>
 </section>
