--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,11 +3,11 @@
 ---
 <section class="flex flex-row flex-auto justify-between py-12">
     <div class="text-lg">
-	<h1>Enrique Javier</h1>
+	<h1 class="text-ef-green font-bold">Enrique Javier</h1>
     </div>
     <div class="content-center">
-	<a href="/">home</a>
-	<a href="/about">about</a>
-	<a href="/blog">blog</a>
+	<a href="/" class="hover:text-ef-red">home</a>
+	<a href="/about" class="hover:text-ef-red">about</a>
+	<a href="/blog" class="hover:text-ef-red">blog</a>
     </div>
 </section>
