--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,44 +21,44 @@ const tools = ["Neovim", "Bash", "PowerShell", "MySQL", "JSON", "YAML", "Markdow
 	    </p>
 	</section>
 	<section class="flex flex-col space-y-3">
-	    <h2>Work History</h2>
+	    <h2 class="text-base text-ef-green font-bold">Work History</h2>
 	    <p>Accenture (Pharmaceutical), Program Management Representative</p>
 	    <p>Accenture (Insurance), DevOps Engineer</p>
 	    <p>Hermes of Paris USA, Information Technology Intern</p>
 	    <p>The Metropolitan Museum of Art, Buildings and Management Intern</p>
 	</section>
 	<section class="flex flex-col space-y-3">
-	    <h2>Projects</h2>
+	    <h2 class="text-base text-ef-green font-bold">Projects</h2>
 	    <p>usefulsplash.dev | writing, learning, and coding in public</p>
 	    <p>Koi Pond | personal server and homelab</p>
 	</section>
 	<section class="flex flex-col space-y-3">   
-	    <h2>Skillset</h2>
+	    <h2 class="text-base text-ef-green font-bold">Skillset</h2>
 	    <section class="inline-grid grid-cols-2 gap-3">
-		<h3>Languages</h3>
+		<h3 class="text-ef-aqua font-bold">Languages</h3>
 		<ul class="">
 		    {languages.map((lang) => <li>{lang}</li>)}
 		</ul>
-		<h3>Web Dev</h3>
+		<h3 class="text-ef-aqua font-semibold">Web Dev</h3>
 		<ul>
 		    {webDev.map((webdev) => <li>{webdev}</li>)}
 		</ul>
-		<h3>AWS</h3>
+		<h3 class="text-ef-aqua font-semibold">AWS</h3>
 		<ul>
 		    {cloud.map((service) => <li>{service}</li>)}
 		</ul>
-		<h3>IT & DevOps</h3>
+		<h3 class="text-ef-aqua font-semibold">IT & DevOps</h3>
 		<ul>
 		    {devOps.map((IT) => <li>{IT}</li>)}
 		</ul>
-		<h3>Tools</h3>
+		<h3 class="text-ef-aqua font-semibold">Tools</h3>
 		<ul>
 		    {tools.map((tool) => <li>{tool}</li>)}
 		</ul>
 	    </section>
 	</section>
 	<section>
-	   <a href="/enrique_javier_resume.pdf">Download Resume (PDF)</a>
+	   <a href="/enrique_javier_resume.pdf" class="underline hover:text-ef-red">Download Resume (PDF)</a>
 	</section>
     </main>
 </Layout>
