--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,9 +5,7 @@ import Layout from "../layouts/Layout.astro"
     <main>
 	<section>
 	    <ul>
-		<li><a href="/posts/post-1/">Post 1</a></li>
-		<li><a href="/posts/post-2/">Post 2</a></li>
-		<li><a href="/posts/post-3/">Post 3</a></li>
+		<li><a href="/posts/dive-to-the-heart/">Dive To The Heart</a></li>
 	    </ul>
 	</section>
     </main>
