--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@
 	    <p>&copy; 2025</p>
 	</div>
 	<div class="">
-	    <a href="mailto:emjavier16@proton.me" class="underline">Email</a>
+	    <a allow-intent href="mailto:emjavier16@proton.me" class="underline">Email</a>
 	    <a href="https://github.com/usefulsplash" target="_blank" rel="noreferrer noopener" class="underline">GitHub</a>
 	    <a href="https://twitter.com/emjavier16" target="_blank" rel="noreferrer noopener" class="underline">Twitter</a>
 	</div>
