header footer tweaks

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 <section class="">
-    <div class="flex flex-row justify-between py-20 text-xs">
+    <div class="flex flex-row justify-between pt-16 text-xs">
 	<div>
 	    <p>&copy; 2025</p>
 	</div>
