--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<section class="flex flex-row flex-auto justify-between py-12">
+<section class="flex flex-row flex-auto justify-between pb-12">
     <div class="text-lg">
 	<h1 class="text-ef-green font-bold">Enrique Javier</h1>
     </div>
