--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const tools = ["Neovim", "Bash", "PowerShell", "MySQL", "JSON", "YAML", "Markdow
 ---
 <Layout title={"splashpage"}>
     <main class="flex flex-col space-y-8">
-	<section class="flex flex-col space-y-3">
+	<section class="flex flex-col space-y-3 text-pretty">
 	    <p>
 		I'm a DevOps Engineer building simpler, seamless workflows for all.
 	    </p>
