--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 
 
-const job = "Accenture";
+const job = "N/A";
 const employed = false
 ---
 <Layout title={"about"}>
