--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title = "Default" } = Astro.props as Props;
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>{title}</title>
     </head>
-    <body class="font-mono p-4 text-sm bg-primary">
+    <body class="font-mono px-6 py-12 text-sm bg-primary">
 	<Header />
 	<slot />
 	<Footer />
