--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,14 @@
 ---
 import Layout from "../layouts/Layout.astro"
+import { formatDate } from "../utils/date";
+
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 ---
 <Layout title={"blog"}>
     <main>
 	<section>
 	    <ul>
-		<li><a href="/posts/dive-to-the-heart/">Dive To The Heart</a></li>
+		{allPosts.map((post: any) => <li><a href={post.url} class="text-base text-ef-aqua">{post.frontmatter.title}</a></li>)}
 	    </ul>
 	</section>
     </main>
