--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,10 +2,10 @@
 
 ---
 <section class="flex flex-row flex-auto justify-between pb-12">
-    <div class="text-lg">
+    <div>
 	<h1 class="text-ef-green font-bold">Enrique Javier</h1>
     </div>
-    <div class="content-center">
+    <div>
 	<a href="/" class="hover:text-ef-red">home</a>
 	<a href="/about" class="hover:text-ef-red">about</a>
 	<a href="/blog" class="hover:text-ef-red">blog</a>
