further responsive design tweaks

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title = "Default" } = Astro.props as Props;
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>{title}</title>
     </head>
-    <body class="font-mono max-w-[60em] px-[1em] py-[2em] text-sm min-[480px]:px-[7em]">
+    <body class="font-mono max-w-[60em] px-[1em] py-[2em] text-sm min-[480px]:p-[7em]">
 	<Header />
 	<slot />
 	<Footer />
