--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title = "Default" } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="bg-ef-bg text-ef-fg flex flex-col min-h-screen justify-center items-center">
+<html lang="en" class="bg-ef-bg text-ef-fg">
     <head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
