--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,11 @@
 ---
-import Layout from "./Layout.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+
+export interface Props {
+  title?: string;
+}
+
 const { frontmatter } = Astro.props;
 
 const dateOptions: object = {
@@ -10,12 +16,23 @@ const dateOptions: object = {
 
 const formattedPublishDate = new Date(frontmatter.pubDate).toLocaleDateString("en-US", dateOptions);
 ---
-<Layout title={frontmatter.title}>
-    <meta charset="utf-8" />
-    <section class="flex flex-col space-y-3">
-	<h1 class="text-ef-green">{frontmatter.title}</h1>
-	<p class="text-ef-orange font-extralight">{formattedPublishDate}</p>
+<!DOCTYPE html>
+<html lang="en" class="bg-ef-bg text-ef-fg">
+    <head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>{frontmatter.title}</title>
+    </head>
+    <body class="font-mono max-w-[60em] px-[1em] py-[2em] text-sm min-[480px]:p-[7em]">
+	<section class="pb-12">
+	    <a href="/blog" class="font-extralight hover:text-ef-red"><p>⤶ Back</p></a>
+	</section>
+	<section class="flex flex-col space-y-3">
+	    <h1 class="text-ef-green text-base">{frontmatter.title}</h1>
+	    <p class="text-ef-orange font-extralight text-xs">{formattedPublishDate}</p>
 	<slot />
-    </section>
-</Layout>
-
+	</section>
+	<Footer />
+    </body>
+</html>
