--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,13 +2,26 @@
 import Layout from "../layouts/Layout.astro"
 
 const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+
+const dateOptions: object = {
+    month: "short",
+    day: "numeric",
+    year: "numeric",
+};
 ---
 <Layout title={"blog"}>
     <main class="flex flex-col space-y-8">
 	<section class="flex flex-col space-y-2">
 	    <h2 class="text-ef-green">Archive</h2>
 	    <ul>
-		{allPosts.map((post: any) => <li><a href={post.url} class="underline hover:text-ef-red">{post.frontmatter.title}</a></li>)}
+	    {
+		allPosts.map((post: any) => 
+		    <li>
+			<a href={post.url} class="underline hover:text-ef-red">{post.frontmatter.title}</a>
+			<p class="inline font-extralight">{ new Date(post.frontmatter.pubDate).toLocaleString("en-US", dateOptions) }</p>
+		    </li>
+		)
+	    }
 	    </ul>
 	</section>
     </main>
