--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro"
 
-const languages = ["Python", "Java", "JavaScript", "Typescript", "Go"];
-const webDev = ["React", "Angular", "Astro", "Flask", "Django", "FastAPI", "TailwindCSS", "Spring Boot"];
-const cloud = ["S3", "EC2", "Lambda", "DynamoDB", "IAM", "VPC", "SQS"];
-const devOps = ["Docker", "Kubernetes", "Terraform", "GitHub Actions", "Jenkins", "Ansible", "Enterprise Linux"];
-const tools = ["Neovim", "Bash", "PowerShell", "MySQL", "JSON", "YAML", "Markdown", "MDX", "Jira", "Confluence"];
+const job = "N/A";
+const employed = false
+const currGame = "Fire Emblem Engage"
 ---
 <Layout title={"splashpage"}>
     <main class="flex flex-col space-y-8">
@@ -20,42 +18,25 @@ const tools = ["Neovim", "Bash", "PowerShell", "MySQL", "JSON", "YAML", "Markdow
 		I strive to make technology smoother and intuitive at every step, supporting peers and clients alike in the hopes of fostering that same fondness for good tools, too.
 	    </p>
 	</section>
-	<section class="flex flex-col space-y-3">
-	    <h2 class="text-ef-green font-bold">Work History</h2>
-	    <p>Accenture (Pharmaceutical), Program Management Representative</p>
-	    <p>Accenture (Insurance), DevOps Engineer</p>
-	    <p>Hermes of Paris USA, Information Technology Intern</p>
-	    <p>The Metropolitan Museum of Art, Buildings and Management Intern</p>
-	</section>
-	<section class="flex flex-col space-y-3">
-	    <h2 class="text-ef-green font-bold">Projects</h2>
-	    <p>usefulsplash.dev | writing, learning, and coding in public</p>
-	    <p>Koi Pond | personal server and homelab</p>
-	</section>
-	<section class="flex flex-col space-y-3">   
-	    <h2 class="text-ef-green font-bold">Skillset</h2>
-	    <section class="grid grid-cols-3 gap-3">
-		<h3 class="text-ef-aqua font-semibold col-span-2">Languages</h3>
-		<ul>
-		    {languages.map((lang) => <li>{lang}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">Web Dev</h3>
-		<ul>
-		    {webDev.map((webdev) => <li>{webdev}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">AWS</h3>
-		<ul>
-		    {cloud.map((service) => <li>{service}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">IT & DevOps</h3>
-		<ul>
-		    {devOps.map((IT) => <li>{IT}</li>)}
-		</ul>
-		<h3 class="text-ef-aqua font-semibold col-span-2">Tools</h3>
-		<ul>
-		    {tools.map((tool) => <li>{tool}</li>)}
-		</ul>
-	    </section>
+	<section class="flex flex-col space-y-6">
+	    <h2 class="font-semibold text-ef-aqua text-base">Currently</h2>
+	    <ul class="list-disc list-inside"> 
+		{ employed ? 
+		    <li>working at {job}!</li> 
+		    : <li>Looking for work in DevOps and IT roles (pls hire me)</li>
+		}
+		<li>Playing through my gaming backlog [now playing: {currGame}]</li>
+		<li>Reading <span class="underline">The Pragmatic Programmer</span> by Dave Thomas and Andy Hunt</li>
+		<li>Practicing recipes to host dinner parties and get-togethers</li>
+		<li>Tinkering with my homelab environment to access my data anywhere</li>
+	    </ul>
+	    <h2 class="font-semibold text-ef-aqua text-base">Previously</h2>
+	    <ul class="list-disc list-inside">
+		<li>Led user requirement gathering and refining for a custom medical coding software solution with <a href="https://www.accenture.com/us-en" target="_blank" class="text-ef-purple hover:text-ef-red">Accenture</a> for a leading pharmaceutical company</li>
+		<li>Developed and maintained CI/CD pipelines with <a href="https://www.accenture.com/us-en" target="_blank" class="text-ef-purple hover:text-ef-red">Accenture</a> for the business insurance work stream of a leading insurance company</li>
+		<li>Supported remote data center integrations with on-prem hardware at <a href="https://www.hermes.com/us/en/" target="_blank" class="text-ef-purple hover:text-ef-red">Hermes of Paris USA</a></li>
+		<li>Researched archive architectural budget spending data for new exhibit budget projections at <a href="https://www.metmuseum.org/" target="_blank" class="text-ef-purple hover:text-ef-red">The Metropolitan Museum of Art</a></li>
+	    </ul>
 	</section>
 	<section>
 	   <a href="/enrique_javier_resume.pdf" class="underline hover:text-ef-red">Download Resume (PDF)</a>
