--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,7 +12,7 @@ const dateOptions: object = {
 <Layout title={"blog"}>
     <main class="flex flex-col space-y-8">
 	<section class="flex flex-col space-y-2">
-	    <h2 class="text-ef-green">Archive</h2>
+	    <h2 class="text-ef-green">Archive - Under Construction</h2>
 	    <ul>
 	    {
 		allPosts.map((post: any) => 
