new current game

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro"
 
 const job = "N/A";
 const employed = false
-const currGame = "Fire Emblem Sacred Stones"
+const currGame = "Final Fantasy VII Rebirth"
 ---
 <Layout title={"splashpage"}>
     <main class="flex flex-col space-y-8">
