Testing GitHub Actions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,7 @@ const currGame = "Final Fantasy VII Rebirth"
 	    <p>
 		I strive to make technology smoother and intuitive at every step, supporting peers and clients alike in the hopes of fostering that same fondness for good tools, too.
 	    </p>
+		<p>Hello from GitHub Actions!</p>
 	</section>
 	<section class="flex flex-col space-y-6">
 	    <h2 class="font-semibold text-ef-aqua text-base">Currently</h2>
