index page updates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro"
 
 const job = "N/A";
 const employed = false
-const currGame = "Final Fantasy VII Rebirth"
+const currGame = "Digimon Story: Time Stranger"
 ---
 <Layout title={"splashpage"}>
     <main class="flex flex-col space-y-8">
@@ -17,7 +17,6 @@ const currGame = "Final Fantasy VII Rebirth"
 	    <p>
 		I strive to make technology smoother and intuitive at every step, supporting peers and clients alike in the hopes of fostering that same fondness for good tools, too.
 	    </p>
-		<p>Hello from GitHub Actions!</p>
 	</section>
 	<section class="flex flex-col space-y-6">
 	    <h2 class="font-semibold text-ef-aqua text-base">Currently</h2>
