--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const currGame = "Digimon Story: Time Stranger"
 	    <ul class="list-disc list-inside">
 		<li>Led user requirement gathering and refining for a custom medical coding software solution with <a href="https://www.accenture.com/us-en" target="_blank" class="text-ef-purple hover:text-ef-red">Accenture</a> for a leading pharmaceutical company</li>
 		<li>Developed and maintained CI/CD pipelines with <a href="https://www.accenture.com/us-en" target="_blank" class="text-ef-purple hover:text-ef-red">Accenture</a> for the business insurance work stream of a leading insurance company</li>
-		<li>Supported remote data center integrations with on-prem hardware at <a href="https://www.hermes.com/us/en/" target="_blank" class="text-ef-purple hover:text-ef-red">Hermes of Paris USA</a></li>
+		<li>Spearheaded remote data center integrations with on-prem hardware at <a href="https://www.hermes.com/us/en/" target="_blank" class="text-ef-purple hover:text-ef-red">Hermes of Paris USA</a></li>
 		<li>Researched archive architectural budget spending data for new exhibit budget projections at <a href="https://www.metmuseum.org/" target="_blank" class="text-ef-purple hover:text-ef-red">The Metropolitan Museum of Art</a></li>
 	    </ul>
 	</section>
