--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@
 	<div>
 	    <a href="mailto:emjavier16@proton.me" target="_blank" class="underline  hover:text-ef-red">Email</a>
 	    <a href="https://github.com/usefulsplash" target="_blank" rel="noreferrer noopener" class="underline  hover:text-ef-red">GitHub</a>
-	    <a href="https://www.linkedin.com/in/enrique-javier-349655223/" target="_blank" rel="noreferrer noopener" class= "underline hover:text-ef-red">LinkedIn<a>
+	    <a href="https://www.linkedin.com/in/enrique-javier-349655223/" target="_blank" rel="noreferrer noopener" class= "underline hover:text-ef-red">LinkedIn</a>
 	    <a href="https://twitter.com/emjavier16" target="_blank" rel="noreferrer noopener" class="underline  hover:text-ef-red">Twitter</a>
 	</div>
     </div>
